# margin

./: .env.example  .env.local.example  .env.sosein-live.example  .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .source-fingerprint  Assets.car  icon.icns
apps/desktop/src-tauri/icons/icon.icon/: icon.json
apps/desktop/src-tauri/ios/: project.yml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: components.json  index.html  package.json  playwright.e2e.config.ts  playwright.integration.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.benchmark.config.ts  vitest.unit.config.ts
apps/web/src/: App.svelte  main.ts  styles.css
apps/web/src/assets/fonts/: Euler-Math-SOURCE.txt
apps/web/src/lib/: api.ts  app-types.ts  draft-suggestions.test.ts  draft-suggestions.ts  editor-metrics.test.ts  embedded-margin.test.ts  embedded-margin.ts  local-documents.ts  local-identity.test.ts  markdown-code-fences.test.ts  markdown-code-fences.ts  markdown-frontmatter.test.ts  markdown-frontmatter.ts  markdown-images.test.ts  markdown-images.ts  markdown-indent.test.ts  markdown-indent.ts  markdown-lists.test.ts  markdown-lists.ts  markdown-math.test.ts  markdown-math.ts  markdown-tables.test.ts  markdown-tables.ts  markdown.ts  partial-markdown-core.ts  partial-markdown-text.bench.ts  partial-markdown-text.test.ts  partial-markdown-text.ts  print-markdown.ts  sosein-cloud.test.ts  sosein-cloud.ts  sosein-session-store.ts  types.ts
apps/web/src/lib/components/: FileTreeEntry.svelte
apps/web/src/lib/components/app/: CommandPalette.svelte  EditingModeToggle.svelte  EditorTitlebar.svelte  FileTreePanel.svelte  MarginRail.svelte  SettingsDialog.svelte  SoseinCloudDialog.svelte
apps/web/src/lib/features/app/: command-registry.ts  local-identity.ts
apps/web/src/lib/features/comments/: draft-suggestions.test.ts  draft-suggestions.ts
apps/web/src/lib/features/documents/: document-tabs.test.ts  document-tabs.ts  local-document-session.ts  local-documents.test.ts  recent-documents-service.ts
apps/web/src/lib/features/native-shell/: native-bridge.ts
apps/web/src/lib/features/print/: print-markdown.test.ts  print-markdown.ts
apps/web/src/lib/features/sosein-cloud/: sosein-cloud.test.ts  sosein-cloud.ts  sosein-codemirror-sync.ts  sosein-session-store.test.ts  sosein-session-store.ts  sosein-workspace.ts
apps/web/src/lib/live-preview/: mermaid.ts
apps/web/src/lib/live-preview/widgets/: code-language-label-widget.ts  frontmatter-widget.ts  heading-collapse-toggle-widget.ts  horizontal-rule-widget.ts  index.ts  shared.ts  (+9 more)
apps/web/tests/e2e/: sosein-live.spec.ts
apps/web/tests/integration/: command-palette.spec.ts  comments-persistence.spec.ts  editor.spec.ts  file-persistence.spec.ts  helpers.ts  native-bridge.spec.ts  rich-editor.spec.ts  settings-updates.spec.ts  sosein-workspace.spec.ts  tabs.spec.ts
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
crates/margin-core/: Cargo.toml
crates/margin-core/src/: anchor.rs  lib.rs  patch.rs  sidecar.rs
crates/markdown-core/: Cargo.toml
crates/markdown-core/src/: lib.rs
docs/: frontend-testing-strategy.md  sosein-cloud-workspace-architecture.md
scripts/: build-markdown-core-wasm.mjs  dev-web-or-reuse.mjs  load-sosein-e2e-env.sh  package-mac-dmg.mjs  profile-typing-performance.mjs  write-tauri-updater-manifest.mjs
(+15 files in other folders)
