[package]
name = "margin-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
rfd = "0.15"
