[package]
name = "margin-desktop"
version = "0.1.5"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
ignore = "0.4"
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"

[target.'cfg(not(target_os = "ios"))'.dependencies]
notify = "8"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
rfd = "0.15"
